# poputchiki

./: .gitignore  IDEF0.rsf  README.md  authorization.rsf  registration.rsf  route_publication.rsf
IDEF0/: FindPath.rsf
map_service/: Cargo.toml  build.bat
map_service/examples/: fack.rs  main.py
map_service/src/: graph.rs  lib.rs  osm_map.rs  utils.rs
server/: build_map_service.bat
server/server/: settings.py  urls.py
server/templates/: base.html  map_view.html  user_map_view.html
server/web_map/: apps.py  lab05  map_manager.py  map_service_mock.py  models.py  urls.py  views.py
server/web_map/migrations/: 0001_initial.py  0002_pathpoint.py  0002_transport.py  0003_auto_20200604_1941.py  0004_auto_20200607_1525.py  0005_userpath_transport.py
server/web_map/templates/: base.html
server/web_map/templates/htmlfiles/: Enter.html  add_transport.html  base.html  main.html  make_way.html  registration.html  show_transport.html
server/web_map/templates/registration/: base.html  logged_out.html  login.html
server/web_map/templates/web_map/: map_view.html
