[package]
name = "map_service"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"
quick-xml = "0.18.1"

[lib]
name = "map_service"
crate-type = ["rlib", "cdylib"]

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git#626268d28aeef57c04b45bdc8140966965742d5f"
branch = "master"
features = ["extension-module"]