[package]
name = "map_service"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"
quick-xml = "0.18.1"
serde = {version="1.0.111", features = ["derive"]}
serde_json = "1.0.53"
log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "1.4.0"

[lib]
name = "map_service"
crate-type = ["rlib", "cdylib"]

[dependencies.pyo3]
version = "0.10.1"
#git = "https://github.com/PyO3/pyo3.git#626268d28aeef57c04b45bdc8140966965742d5f"
#branch = "master"
features = ["extension-module"]